fixed errors after cherry-picking