@@ -26,13 +26,13 @@ import org.junit.Before;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
-import java.util.List;
 import java.util.Map;
 import java.util.concurrent.TimeUnit;
 import java.util.function.BiConsumer;
 import java.util.function.Consumer;
 import java.util.function.LongSupplier;
 
+import static java.util.Collections.singletonList;
 import static org.hamcrest.CoreMatchers.equalTo;
 import static org.hamcrest.Matchers.hasSize;
 import static org.hamcrest.Matchers.is;
@@ -121,8 +121,8 @@ public class CompoundProcessorTests extends ESTestCase {
 
         LongSupplier relativeTimeProvider = mock(LongSupplier.class);
         when(relativeTimeProvider.getAsLong()).thenReturn(0L, TimeUnit.MILLISECONDS.toNanos(1));
-        CompoundProcessor compoundProcessor = new CompoundProcessor(false, Collections.singletonList(processor1),
-            Collections.singletonList(processor2), relativeTimeProvider);
+        CompoundProcessor compoundProcessor = new CompoundProcessor(false, singletonList(processor1),
+            singletonList(processor2), relativeTimeProvider);
         compoundProcessor.execute(ingestDocument, (result, e) -> {});
         verify(relativeTimeProvider, times(2)).getAsLong();
 
@@ -153,8 +153,8 @@ public class CompoundProcessorTests extends ESTestCase {
 
         LongSupplier relativeTimeProvider = mock(LongSupplier.class);
         when(relativeTimeProvider.getAsLong()).thenReturn(0L);
-        CompoundProcessor compoundProcessor = new CompoundProcessor(false, Collections.singletonList(processor1),
-            Collections.singletonList(processor2), relativeTimeProvider);
+        CompoundProcessor compoundProcessor = new CompoundProcessor(false, singletonList(processor1),
+            singletonList(processor2), relativeTimeProvider);
         IngestDocument[] result = new IngestDocument[1];
         compoundProcessor.execute(ingestDocument, (r, e) -> result[0] = r);
         assertThat(result[0], nullValue());
@@ -181,10 +181,10 @@ public class CompoundProcessorTests extends ESTestCase {
         });
         LongSupplier relativeTimeProvider = mock(LongSupplier.class);
         when(relativeTimeProvider.getAsLong()).thenReturn(0L);
-        CompoundProcessor compoundOnFailProcessor = new CompoundProcessor(false, Collections.singletonList(processorToFail),
-            Collections.singletonList(lastProcessor), relativeTimeProvider);
-        CompoundProcessor compoundProcessor = new CompoundProcessor(false, Collections.singletonList(processor),
-            Collections.singletonList(compoundOnFailProcessor), relativeTimeProvider);
+        CompoundProcessor compoundOnFailProcessor = new CompoundProcessor(false, singletonList(processorToFail),
+            singletonList(lastProcessor), relativeTimeProvider);
+        CompoundProcessor compoundProcessor = new CompoundProcessor(false, singletonList(processor),
+            singletonList(compoundOnFailProcessor), relativeTimeProvider);
         compoundProcessor.execute(ingestDocument, (result, e) -> {});
 
         assertThat(processorToFail.getInvokedCounter(), equalTo(1));
@@ -206,8 +206,8 @@ public class CompoundProcessorTests extends ESTestCase {
 
         CompoundProcessor failCompoundProcessor = new CompoundProcessor(relativeTimeProvider, firstProcessor);
 
-        CompoundProcessor compoundProcessor = new CompoundProcessor(false, Collections.singletonList(failCompoundProcessor),
-            Collections.singletonList(secondProcessor), relativeTimeProvider);
+        CompoundProcessor compoundProcessor = new CompoundProcessor(false, singletonList(failCompoundProcessor),
+            singletonList(secondProcessor), relativeTimeProvider);
         compoundProcessor.execute(ingestDocument, (result, e) -> {});
 
         assertThat(firstProcessor.getInvokedCounter(), equalTo(1));
@@ -229,11 +229,11 @@ public class CompoundProcessorTests extends ESTestCase {
 
         LongSupplier relativeTimeProvider = mock(LongSupplier.class);
         when(relativeTimeProvider.getAsLong()).thenReturn(0L);
-        CompoundProcessor failCompoundProcessor = new CompoundProcessor(false, Collections.singletonList(firstProcessor),
-            Collections.singletonList(failProcessor), relativeTimeProvider);
+        CompoundProcessor failCompoundProcessor = new CompoundProcessor(false, singletonList(firstProcessor),
+            singletonList(failProcessor), relativeTimeProvider);
 
-        CompoundProcessor compoundProcessor = new CompoundProcessor(false, Collections.singletonList(failCompoundProcessor),
-            Collections.singletonList(secondProcessor), relativeTimeProvider);
+        CompoundProcessor compoundProcessor = new CompoundProcessor(false, singletonList(failCompoundProcessor),
+            singletonList(secondProcessor), relativeTimeProvider);
         compoundProcessor.execute(ingestDocument, (result, e) -> {});
 
         assertThat(firstProcessor.getInvokedCounter(), equalTo(1));
@@ -255,11 +255,11 @@ public class CompoundProcessorTests extends ESTestCase {
 
         LongSupplier relativeTimeProvider = mock(LongSupplier.class);
         when(relativeTimeProvider.getAsLong()).thenReturn(0L);
-        CompoundProcessor failCompoundProcessor = new CompoundProcessor(false, Collections.singletonList(firstProcessor),
-            Collections.singletonList(new CompoundProcessor(relativeTimeProvider, failProcessor)));
+        CompoundProcessor failCompoundProcessor = new CompoundProcessor(false, singletonList(firstProcessor),
+            singletonList(new CompoundProcessor(relativeTimeProvider, failProcessor)));
 
-        CompoundProcessor compoundProcessor = new CompoundProcessor(false, Collections.singletonList(failCompoundProcessor),
-            Collections.singletonList(secondProcessor), relativeTimeProvider);
+        CompoundProcessor compoundProcessor = new CompoundProcessor(false, singletonList(failCompoundProcessor),
+            singletonList(secondProcessor), relativeTimeProvider);
         compoundProcessor.execute(ingestDocument, (result, e) -> {});
 
         assertThat(firstProcessor.getInvokedCounter(), equalTo(1));
@@ -274,7 +274,7 @@ public class CompoundProcessorTests extends ESTestCase {
         LongSupplier relativeTimeProvider = mock(LongSupplier.class);
         when(relativeTimeProvider.getAsLong()).thenReturn(0L);
         CompoundProcessor pipeline = new CompoundProcessor(false, Arrays.asList(firstProcessor, secondProcessor),
-            Collections.singletonList(onFailureProcessor), relativeTimeProvider);
+            singletonList(onFailureProcessor), relativeTimeProvider);
         pipeline.execute(ingestDocument, (result, e) -> {});
         assertThat(firstProcessor.getInvokedCounter(), equalTo(1));
         assertThat(secondProcessor.getInvokedCounter(), equalTo(0));
@@ -293,7 +293,7 @@ public class CompoundProcessorTests extends ESTestCase {
         });
 
         Pipeline pipeline2 = new Pipeline("2", null, null, new CompoundProcessor(new TestProcessor(new RuntimeException("failure!"))));
-        Pipeline pipeline1 = new Pipeline("1", null, null, new CompoundProcessor(false, List.of(new AbstractProcessor(null) {
+        Pipeline pipeline1 = new Pipeline("1", null, null, new CompoundProcessor(false, singletonList(new AbstractProcessor(null) {
             @Override
             public void execute(IngestDocument ingestDocument, BiConsumer<IngestDocument, Exception> handler) {
                 ingestDocument.executePipeline(pipeline2, handler);
@@ -308,7 +308,7 @@ public class CompoundProcessorTests extends ESTestCase {
             public String getType() {
                 return "pipeline";
             }
-        }), List.of(onFailureProcessor)));
+        }), singletonList(onFailureProcessor)));
 
         ingestDocument.executePipeline(pipeline1, (document, e) -> {
             assertThat(document, notNullValue());
@@ -321,8 +321,8 @@ public class CompoundProcessorTests extends ESTestCase {
         TestProcessor processor = new TestProcessor("my_tag", "my_type", new RuntimeException());
         IngestProcessorException ingestProcessorException1 =
             CompoundProcessor.newCompoundProcessorException(new RuntimeException(), processor, ingestDocument);
-        assertThat(ingestProcessorException1.getHeader("processor_tag"), equalTo(List.of("my_tag")));
-        assertThat(ingestProcessorException1.getHeader("processor_type"), equalTo(List.of("my_type")));
+        assertThat(ingestProcessorException1.getHeader("processor_tag"), equalTo(singletonList("my_tag")));
+        assertThat(ingestProcessorException1.getHeader("processor_type"), equalTo(singletonList("my_type")));
         assertThat(ingestProcessorException1.getHeader("pipeline_origin"), nullValue());
 
         IngestProcessorException ingestProcessorException2 =
@@ -353,9 +353,9 @@ public class CompoundProcessorTests extends ESTestCase {
         Exception[] holder = new Exception[1];
         ingestDocument.executePipeline(pipeline1, (document, e) -> holder[0] = e);
         IngestProcessorException ingestProcessorException = (IngestProcessorException) holder[0];
-        assertThat(ingestProcessorException.getHeader("processor_tag"), equalTo(List.of("my_tag")));
-        assertThat(ingestProcessorException.getHeader("processor_type"), equalTo(List.of("my_type")));
-        assertThat(ingestProcessorException.getHeader("pipeline_origin"), equalTo(List.of("2", "1")));
+        assertThat(ingestProcessorException.getHeader("processor_tag"), equalTo(singletonList("my_tag")));
+        assertThat(ingestProcessorException.getHeader("processor_type"), equalTo(singletonList("my_type")));
+        assertThat(ingestProcessorException.getHeader("pipeline_origin"), equalTo(Arrays.asList("2", "1")));
     }
 
     private void assertStats(CompoundProcessor compoundProcessor, long count,  long failed, long time) {
